--- a/Whats/src/Login.css
+++ b/Whats/src/Login.css
@@ -34,6 +34,12 @@
   margin-top: 20px;
 }
 
+#subtituloverde {
+  color: rgb(29, 158, 37);
+  font-size: 15px;
+  margin-top: 20px;
+}
+
 .box {
   display: flex;
   height: 40vh;
@@ -59,10 +65,11 @@
 .boxtext {
   height: 50px;
   width: 350px;
-  border: solid 2px rgb(138, 138, 138);
+  border: solid 2px rgb(170, 170, 170);
   border-radius: 9px;
   background-color: aliceblue;
   margin-top: 20px;
+  padding-left: 10px;
 }
 
 .boxbutton {
@@ -123,4 +130,31 @@
 
 .gray{
   color: gray;
+}
+
+#mail{
+  height: 30px;
+  width: auto;
+  position: absolute;
+  top: 467px;
+  right: 873px;
+}
+
+.boxtext2 {
+  height: 50px;
+  width: 350px;
+  border: solid 2px rgb(170, 170, 170);
+  border-radius: 9px;
+  background-color: aliceblue;
+  margin-top: 20px;
+  padding-left: 50px;
+}
+#espaco{
+  margin-top: 90px;
+}
+#whatsapp2{
+  position: absolute;
+  width: 110px;
+  height: auto;
+  top: 130px;
 }
