Correcao de bug no css
Devido a conflitos nos ultimos cinco commits parte do codigo foi reescrito e um bug no css de id subtitulo apareceu. Por algum motivo o id não estava pegando nos componentes mesmo eles estando em páginas diferentes. Apenas troquei o id para um classe e ele voltou a funcionar normalmente.

--- a/Whats/src/Login.css
+++ b/Whats/src/Login.css
@@ -28,13 +28,7 @@
   margin-top: 20px;
 }
 
-#subtitulo {
-  color: rgb(89, 89, 89);
-  font-size: 15px;
-  margin-top: 20px;
-}
-
-#subtituloverde {
+.subtituloverde {
   color: rgb(29, 158, 37);
   font-size: 15px;
   margin-top: 20px;
@@ -137,7 +131,7 @@
   height: 30px;
   width: auto;
   position: absolute;
-  top: 467px;
+  top: 473px;
   right: 873px;
 }
 
@@ -158,4 +152,10 @@
   width: 110px;
   height: auto;
   top: 130px;
+}
+
+.subtitulo {
+  color: rgb(89, 89, 89);
+  font-size: 15px;
+  margin-top: 20px;
 }
